--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-simpletabs",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Just a simple tabs component built with React",
   "author": {
     "name": "Pedro Nauck",
@@ -32,7 +32,7 @@
     "build:example": "babel ./example/app.js -o ./example/app.es5.js"
   },
   "peerDependencies": {
-    "react": "15.x"
+    "react": "0.14.x || 15.x"
   },
   "dependencies": {
     "classnames": "^2.2.5"
